<resources>
    <string name="app_name">Read &amp; Music</string>

    <string name="title_activity_splash">ActivitySplash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">ActivityMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="app_title">Đọc truyện và nghe nh</string>
    <string name="author_name">Huynh Thanh Phuc (Frankie) </string>
    <string name="author_mail">phuchuynh.strong@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="diary">Nhật kí</string>
    <string name="novel">Tiểu thuyết</string>
    <string name="story">Truyện</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_music_onoff">Bật / Tắt nhạc</string>
    <string name="pref_key_music_onoff">music_switch</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <string name="pref_title_display_name">Cỡ chữ</string>
    <string name="pref_default_display_name">Vừa</string>
    <string name="pref_small_text_size_option">Nhỏ</string>
    <string name="pref_medium_text_size_option">Vừa</string>
    <string name="pref_large_text_size_option">Lớn</string>


    <string name="pref_title_text_size_list">Cỡ chữ</string>
    <string name="pref_key_text_size_list">text_size_list</string>
    <string-array name="pref_example_list_titles">
        <item>Nhỏ</item>
        <item>Vừa</item>
        <item>Lớn</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>13</item>
        <item>16</item>
        <item>20</item>
    </string-array>

    <string name="pref_title_theme_color_list">Màu nền</string>
    <string name="pref_key_theme_color_list">theme_color_list</string>
    <string-array name="pref_theme_color_list_titles">
        <item>Đen</item>
        <item>Trắng</item>
    </string-array>
    <string-array name="pref_theme_color_values">
        <item>1</item>
        <item>0</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="select_chapter_spinner_text">Chương:</string>
    <string name="search_input_hint">Nhập tên truyện...</string>
    <string name="pre_chap_btn_title">Trước</string>
    <string name="next_chap_btn_title">Sau</string>
</resources>
